# c64

./: .gitattributes  .gitignore  .template-source  CONTRIBUTING.md  README.md  SETUP.md  llms.txt  package.json  template.config.example
.githooks/: README.md  pre-push
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  report_a_problem.yml
.github/agents/: README.md  gemini-reviewer.md  gpt-reviewer.md  template-agent.md  template-lens-agent.md
.github/extensions/compliance-hooks/: README.md  extension.mjs  policy.mjs  policy.test.mjs
.github/instructions/: commit-checklist.md  git-push.md  merge-block.md  onposttooluse.md  onsessionstart.md  pr-checklist.md
.github/workflows/: core.yml  release.yml
core/: CMakeLists.txt
core/include/c64/: bus.hpp  cia.hpp  cpu.hpp  cpu_bus.hpp  device.hpp  drive.hpp  errors.hpp  iec.hpp  io_types.hpp  machine.hpp  media.hpp  result.hpp  rom.hpp  scenarios.hpp  sha256.hpp  sid.hpp  timing.hpp  types.hpp  via6522.hpp  vic.hpp  vicii.hpp
core/src/: bus.cpp  cia.cpp  cpu.cpp  drive.cpp  errors.cpp  iec.cpp  machine.cpp  media.cpp  result.cpp  rom.cpp  scenarios.cpp  sha256.cpp  sid.cpp  timing.cpp  via6522.cpp  vic.cpp  vicii.cpp
core/tests/: harness.hpp  test_bus.cpp  test_cia.cpp  test_cpu.cpp  test_decimal.cpp  test_drive.cpp  test_framework.hpp  test_integration.cpp  test_machine.cpp  test_main.cpp  test_media.cpp  test_opcodes.cpp  test_perf.cpp  test_rom.cpp  test_scenarios.cpp  test_sha256.cpp  test_sid.cpp  test_timing.cpp  test_undocumented.cpp  test_vic.cpp
core/tests/fixtures/: border_bg_fixture.hpp  border_bg_fixture.json
core/tools/: scenario_dump.cpp
core/wasm/: embind.cpp
docs/: CODE-REVIEW-PANEL.md  LEARNINGS.md  MISSION.md  ROLES.md  SUGGESTIONS.md
docs/learnings/: README.md
docs/learnings/archive/: README.md
docs/learnings/monthly/: README.md
docs/learnings/sessions/: README.md
docs/learnings/weekly/: README.md
examples/: README.md  build-example.mjs  load-example.mjs
examples/border-flash/: expected.json  project.json  source.asm
scripts/dev/: check-learnings-budget.sh  install-hooks.sh  instantiate.sh  pre-push-tests.sh  pre-push-tests.sh.example  require-release-artifacts.mjs  review-template-updates.mjs  run-node-tests.mjs  serve.mjs  smoke-pages-deployment.mjs  test-critical-path.sh  verify-dist.mjs
specs/: CODEGEN.md  EMULATOR.md  IO.md  MEDIA.md  README.md  ROM-ASSETS.md  SYSTEM.md  TEMPLATE-INHERITANCE.md  VIC-II.md  WEB-CLIENT.md  _TEMPLATE.md
src/: assembler.js  basicStub.js  d64.js  diagnostics.js  hash.js  index.js  opcodes.js  petscii.js  prg.js  project.js  version.js
status/: SYSTEM-STATUS.md
tests/: assembler.test.mjs  core-fixture.test.mjs  d64.test.mjs  example.test.mjs  hash.test.mjs  helpers.mjs  opcodes.test.mjs  petscii.test.mjs  prg.test.mjs  project.test.mjs  regressions.test.mjs  roundtrip.test.mjs  wasm-smoke.test.mjs  web-addresses.test.mjs  web-build.test.mjs  web-capabilities.test.mjs  web-emulator.test.mjs  web-gallery.test.mjs  web-share.test.mjs  web-storage.test.mjs  web-urlparams.test.mjs
tests/deployment/: pages-smoke.test.mjs  run-node-tests.test.mjs  workflow.test.mjs
tests/e2e/: helpers.mjs  ide.e2e.test.mjs  matrix.e2e.test.mjs
tests/interop/: PROVENANCE.md  d64.interop.test.mjs
tests/wasm/: helpers.mjs  parity.test.mjs  smoke.test.mjs
tests/web/: base64url.test.mjs  buildActions.test.mjs  buildClient.test.mjs  diskControls.test.mjs  fullscreen.test.mjs  gallery.test.mjs  galleryActions.test.mjs  galleryBuild.test.mjs  machine-controller.test.mjs  model.test.mjs  rom.test.mjs  urlContract.test.mjs  video.test.mjs  virtualKeyboard.test.mjs
tools/: core-fixture.mjs  gen-core-fixtures.mjs
web/: gallery.json  index.html
web/client/: buildWorker.js  gallery.json  index.html  main.js  styles.css
web/client/lib/: audio.js  autosaveFormat.js  base64url.js  buildActions.js  buildClient.js  bundledRoms.js  capabilities.js  config.js  diagnosticsView.js  diskControls.js  dom.js  downloads.js  downloadsCore.js  errors.js  fullscreen.js  gallery.js  galleryActions.js  galleryValidate.js  input.js  keymap.js  machine.js  pacing.js  palette.js  paths.js  projectModel.js  romValidate.js  roms.js  share.js  storage.js  urlContract.js  video.js  virtualKeyboard.js
web/client/tools/: build-gallery.mjs
web/emulator/: c64.mjs
web/modules/: addresses.v1.js  buildClient.v1.js  buildCore.v1.js  buildWorker.v1.js  capabilities.v1.js  diagnostics.v1.js  download.v1.js  emulatorBridge.v1.js  errors.v1.js  gallery.v1.js  main.v1.js  share.v1.js  storage.v1.js  urlparams.v1.js
web/styles/: app.v1.css
